tests/elab_fail/newCatPanic.lean.out.expected
newCatPanic.lean:2:0: error: unexpected end of input; expected identifier
