tests/elab_fail/newCatPanic.lean
declare_syntax_cat
